# handmade

./: .clang-format  .gitignore  CMakeLists.txt  NOTES.md  README.md  build_clean_debug.sh  main.cpp  vcpkg.json.hide
assets/: somedata
src/: audio.cpp  audio.h  common.h  events.cpp  events.h  inputs.cpp  inputs.h  main.cpp  memory.cpp  memory.h  perf.cpp  perf.h  render.cpp  render.h  resources.cpp  resources.h  state.h  util.cpp  util.h  video.cpp  video.h  world.cpp  world.h
src/audio/: audio.cpp  constants.h  wave_generators.cpp  wave_generators.h  waveforms.cpp  waveforms.h  xface.cpp
src/platform_macos/: paint_scheduler_macos.cpp  paint_scheduler_macos.h
tests/: CMakeLists.txt  test_memory.cpp  tests.cpp
